--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 			<li><a href="index.html">Inicio</a></li>
             <li><a href="">Acerca de Nosotros</a>
 				<ul>
-                    <li><a href="Curriculum_Vitae/Integrante1.html">Integrante 1</a></li>
-                    <li><a href="Curriculum_Vitae/Integrante2.html">Integrante 2</a></li>
-                    <li><a href="Curriculum_Vitae/Integrante3.html">Integrante 3</a></li>
-                    <li><a href="Curriculum_Vitae/Integrante4.html">Integrante 4</a></li>
-                    <li><a href="Curriculum_Vitae/Integrante5.html">Integrante 5</a></li>
+                    <li><a href="Curriculum_Vitae/Integrante1.html">Galindo Oviedo, Joseph Alfredo</a></li>
+                    <li><a href="Curriculum_Vitae/Integrante2.html">Sánchez Polanco, Bruno Daniel</a></li>
+                    <li><a href="Curriculum_Vitae/Integrante3.html">Mendoza Aguilar, Elard Alonso</a></li>
+                    <li><a href="Curriculum_Vitae/Integrante4.html">Roger Cáceres</a></li>
+                    <li><a href="Curriculum_Vitae/Integrante5.html">Jean Piero Andre Bernabe Huanca</a></li>
                 </ul>
              </li>
             <li><a href="Proyecto_Innovacion.html">Proyecto de Innovación</a>
@@ -51,9 +51,9 @@
                 </div> -->
 
                 <div class="main-header__copy__text">
-                    <p><h4>"Escribir el título del Proyecto"</h4></p>
-                    <p>Escribir descripción del problema a resolver.</p>
-                    <p>Escribir descripción de página web como herramienta de control de avances.</p>
+                    <p><h4>"Cityphy"</h4></p>
+                    <p>Usualmente se ven muchos turistas por las calles visitando nuestra hermosa ciudad, pero no siempre son conscientes de todos los detalles o incluso por dónde andan, para eso tenemos una solución.</p>
+                    <p>Diseñamos ésta página con el fin de que la información sea facilitada para los que nos visiten y estén de acuerdo a lo que les presentamos.</p>
 
                 </div>
             </div>
@@ -67,7 +67,7 @@
                 <h4>Acerca de Nosotros</h4>
             </div>
             <div class="about__content">
-                <p>Describir el equipo de trabajo sus actividades en las que son realmente hábiles</p>
+                <p>Somos un equipo del instituto superior tecnológico TECSUP, buscamos un mejor desarrollo para nuestro país</p>
             </div>
         </div>
     </div>
@@ -82,12 +82,12 @@
                     <img src="img/Foto_Integrante_1.jpg" alt="">
                 </div>
                 <div class="team__item__description">
-                    <p class="team__item__description__name">Integrante 1</p>
+                    <p class="team__item__description__name">Galindo Oviedo, Joseph Alfredo</p>
                     <p class="team__item__description__info">Describir que les gusta hacer. y en que actividades son realmente hábiles.</p>
-                    <p class="team__item__description__cal">Rol principal: <strong>Escribir el rol principal asignado</strong></p>
-                    <p class="team__item__description__cal">Rol Secundario: <strong>Escribir el rol secundario asignado</strong></p>
-                    <p class="team__item__description__cal">Numero de Celular: <strong>999999999</strong></p>
-                    <a href="mailto:escribir_correo_institucional@tecsup.edu.pe" class="team__item__description__mail">escribir_correo_institucional@tecsup.edu.pe</a>
+                    <p class="team__item__description__cal">Rol principal: <strong>Coordinador</strong></p>
+                    <p class="team__item__description__cal">Rol Secundario: <strong>Explorador</strong></p>
+                    <p class="team__item__description__cal">Numero de Celular: <strong>None</strong></p>
+                    <a href="mailto:joseph.galindo@tecsup.edu.pe" class="team__item__description__mail">joseph.galindo@tecsup.edu.pe</a>
                 </div>
             </div>
             <div class="team__item">
@@ -95,12 +95,12 @@
                     <img src="img/Foto_Integrante_2.jpg" alt="">
                 </div>
                 <div class="team__item__description">
-                  <p class="team__item__description__name">Integrante 2</p>
+                  <p class="team__item__description__name">Sánchez Polanco, Bruno Daniel</p>
                   <p class="team__item__description__info">Describir que les gusta hacer. y en que actividades son realmente hábiles.</p>
-                  <p class="team__item__description__cal">Rol principal: <strong>Escribir el rol principal asignado</strong></p>
-                  <p class="team__item__description__cal">Rol Secundario: <strong>Escribir el rol secundario asignado</strong></p>
-                  <p class="team__item__description__cal">Numero de Celular: <strong>999999999</strong></p>
-                  <a href="mailto:escribir_correo_institucional@tecsup.edu.pe" class="team__item__description__mail">escribir_correo_institucional@tecsup.edu.pe</a>
+                  <p class="team__item__description__cal">Rol principal: <strong>Creativo</strong></p>
+                  <p class="team__item__description__cal">Rol Secundario: <strong>Coordinador</strong></p>
+                  <p class="team__item__description__cal">Numero de Celular: <strong>None</strong></p>
+                  <a href="mailto:bruno.sanchez@tecsup.edu.pe" class="team__item__description__mail">bruno.sanchez@tecsup.edu.pe</a>
                 </div>
             </div>
             <div class="team__item">
@@ -108,12 +108,12 @@
                     <img src="img/Foto_Integrante_3.jpg" alt="">
                 </div>
                 <div class="team__item__description">
-                  <p class="team__item__description__name">Integrante 3</p>
+                  <p class="team__item__description__name">Mendoza Aguilar, Elard Alonso</p>
                   <p class="team__item__description__info">Describir que les gusta hacer. y en que actividades son realmente hábiles.</p>
-                  <p class="team__item__description__cal">Rol principal: <strong>Escribir el rol principal asignado</strong></p>
-                  <p class="team__item__description__cal">Rol Secundario: <strong>Escribir el rol secundario asignado</strong></p>
-                  <p class="team__item__description__cal">Numero de Celular: <strong>999999999</strong></p>
-                  <a href="mailto:escribir_correo_institucional@tecsup.edu.pe" class="team__item__description__mail">escribir_correo_institucional@tecsup.edu.pe</a>
+                  <p class="team__item__description__cal">Rol principal: <strong>Explorador</strong></p>
+                  <p class="team__item__description__cal">Rol Secundario: <strong>Constructor</strong></p>
+                  <p class="team__item__description__cal">Numero de Celular: <strong>None</strong></p>
+                  <a href="mailto:elard.mendoza@tecsup.edu.pe" class="team__item__description__mail">elard.mendoza@tecsup.edu.pe</a>
                 </div>
             </div>
             <div class="team__item">
@@ -121,12 +121,12 @@
                         <img src="img/Foto_Integrante_4.jpg" alt="">
                     </div>
                     <div class="team__item__description">
-                      <p class="team__item__description__name">Integrante 4</p>
+                      <p class="team__item__description__name">Roger Cáceres</p>
                       <p class="team__item__description__info">Describir que les gusta hacer. y en que actividades son realmente hábiles.</p>
-                      <p class="team__item__description__cal">Rol principal: <strong>Escribir el rol principal asignado</strong></p>
-                      <p class="team__item__description__cal">Rol Secundario: <strong>Escribir el rol secundario asignado</strong></p>
-                      <p class="team__item__description__cal">Numero de Celular: <strong>999999999</strong></p>
-                      <a href="mailto:escribir_correo_institucional@tecsup.edu.pe" class="team__item__description__mail">escribir_correo_institucional@tecsup.edu.pe</a>
+                      <p class="team__item__description__cal">Rol principal: <strong>Comunicador</strong></p>
+                      <p class="team__item__description__cal">Rol Secundario: <strong>Constructor</strong></p>
+                      <p class="team__item__description__cal">Numero de Celular: <strong>None</strong></p>
+                      <a href="mailto:roger.caceres@tecsup.edu.pe" class="team__item__description__mail">roger.caceres@tecsup.edu.pe</a>
                     </div>
                 </div>
                 <div class="team__item">
@@ -134,12 +134,12 @@
                             <img src="img/Foto_Integrante_5.jpg" alt="">
                         </div>
                         <div class="team__item__description">
-                          <p class="team__item__description__name">Integrante 5</p>
+                          <p class="team__item__description__name">Jean Piero Andre Bernabe Huanca</p>
                           <p class="team__item__description__info">Describir que les gusta hacer. y en que actividades son realmente hábiles.</p>
-                          <p class="team__item__description__cal">Rol principal: <strong>Escribir el rol principal asignado</strong></p>
-                          <p class="team__item__description__cal">Rol Secundario: <strong>Escribir el rol secundario asignado</strong></p>
-                          <p class="team__item__description__cal">Numero de Celular: <strong>999999999</strong></p>
-                          <a href="mailto:escribir_correo_institucional@tecsup.edu.pe" class="team__item__description__mail">escribir_correo_institucional@tecsup.edu.pe</a>
+                          <p class="team__item__description__cal">Rol principal: <strong>Comunicador</strong></p>
+                          <p class="team__item__description__cal">Rol Secundario: <strong>Explorador</strong></p>
+                          <p class="team__item__description__cal">Numero de Celular: <strong>None</strong></p>
+                          <a href="mailto:jean.bernabe@tecsup.edu.pe" class="team__item__description__mail">jean.bernabe@tecsup.edu.pe</a>
                         </div>
                     </div>
         </div>
@@ -155,7 +155,7 @@
             </div>
             <div class="footer__copy">
                 <img src="img/fablab.png" alt="">
-                <p>&copy; 2018 - Diseñado por: <a href="colocar_correo_@tecsup.edu.pe">Colocar nombre del editor</a></p>
+                <p>&copy; 2018 - Diseñado por: <a href="bruno.sanchez@tecsup.edu.pe">Sánchez Polanco, Bruno Daniel</a></p>
             </div>
         </div>
     </footer>
