--- a/Curriculum_Vitae/Integrante5.html
+++ b/Curriculum_Vitae/Integrante5.html
@@ -22,11 +22,11 @@
 			<li><a href="../index.html">Inicio</a></li>
             <li><a href="">Acerca de Nosotros</a>
 				<ul>
-                    <li><a href="Integrante1.html">Integrante 1</a></li>
-                    <li><a href="Integrante2.html">Integrante 2</a></li>
-                    <li><a href="Integrante3.html">Integrante 3</a></li>
-                    <li><a href="Integrante4.html">Integrante 4</a></li>
-                    <li><a href="Integrante5.html">Integrante 5</a></li>
+                    <li><a href="Integrante1.html">Galindo Oviedo, Joseph Alfredo</a></li>
+                    <li><a href="Integrante2.html">Sánchez Polanco, Bruno Daniel</a></li>
+                    <li><a href="Integrante3.html">Mendoza Aguilar, Elard Alonso</a></li>
+                    <li><a href="Integrante4.html">Roger Cáceres</a></li>
+                    <li><a href="Integrante5.html">Jean Piero Andre Bernabe Huanca</a></li>
                 </ul>
              </li>
             <li><a href="">Proyecto de Innovación</a>
@@ -46,7 +46,7 @@
     <div id="think">
         <div class="think__title">
             <div class="think__title__text">
-                <h1>Escribir Nombre de Integrante 5</h1>
+                <h1>Jean Piero Andre Bernabe Huanca</h1>
             </div>
             <div class="think__title__content">
         </div>
