--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </div>
             <div class="team__item">
                 <div class="team__item__img">
-                    <img src="img/Foto_Integrante_1.jpg" alt="">
+                    <img src="img/Roger Caceres" alt="">
                 </div>
                 <div class="team__item__description">
                     <p class="team__item__description__name">Galindo Oviedo, Joseph Alfredo</p>
