--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </div>
             <div class="team__item">
                 <div class="team__item__img">
-                    <img src="img/Foto_Integrante_2.jpg" alt="">
+                    <img src="img/Bruno Sanchez.jpeg" alt="">
                 </div>
                 <div class="team__item__description">
                   <p class="team__item__description__name">Sánchez Polanco, Bruno Daniel</p>
