--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <h4>Acerca de Nosotros</h4>
             </div>
             <div class="about__content">
-                <p>Somos un equipo del instituto superior tecnológico TECSUP, buscamos un mejor desarrollo para nuestro país</p>
+                <p>Somos un equipo del instituto superior tecnológico TECSUP, buscamos un mejor desarrollo para nuestro país.</p>
             </div>
         </div>
     </div>
@@ -79,7 +79,7 @@
             </div>
             <div class="team__item">
                 <div class="team__item__img">
-                    <img src="img/Foto_Integrante_1.jpg" alt="">
+                    <img src="img/Joseph.jpg" alt="">
                 </div>
                 <div class="team__item__description">
                     <p class="team__item__description__name">Galindo Oviedo, Joseph Alfredo</p>
@@ -105,7 +105,7 @@
             </div>
             <div class="team__item">
                 <div class="team__item__img">
-                    <img src="img/Foto_Integrante_3.jpg" alt="">
+                    <img src="img/Alonso.jpg" alt="">
                 </div>
                 <div class="team__item__description">
                   <p class="team__item__description__name">Mendoza Aguilar, Elard Alonso</p>
