--- a/Curriculum_Vitae/Integrante4.html
+++ b/Curriculum_Vitae/Integrante4.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../css/styles.css">
     <link href="https://file.myfontastic.com/GFdi3b86tZ4RquQn6hWJeh/icons.css" rel="stylesheet">
-    <title>CV Jean Piero Andre Bernabe Huanca</title>
+    <title>CV Roger Cáceres</title>
 </head>
 <body>
     <div id="top">
@@ -46,14 +46,14 @@
     <div id="think">
         <div class="think__title">
             <div class="think__title__text">
-                <h1>Jean Piero Andre Bernabe Huanca</h1>
+                <h1>Roger Cáceres</h1>
             </div>
             <div class="think__title__content">
         </div>
 
         <div class="think">
             <div class="think__img">
-                <iframe src="https://docs.google.com/document/d/e/2PACX-1vTXUL9QOWmvujeudm_XkXUD7GC1I0fOzoHeWYZTUopqZ-6xskNRaMwp_T2ePbByrZzYyAWQ1btmDsPm/pub?embedded=true" height="560" width="600"></iframe>
+                <iframe src="https://docs.google.com/document/d/e/2PACX-1vRE2f470joXztTcQQXLRFmHru2wvf8CiEkJCiya2AUF_jDbikj1PHC4J91mhU7qyYvCryxGNQreqAOf/pub?embedded=true" height="560" width="600"></iframe>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
