--- a/Curriculum_Vitae/Integrante1.html
+++ b/Curriculum_Vitae/Integrante1.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../css/styles.css">
     <link href="https://file.myfontastic.com/GFdi3b86tZ4RquQn6hWJeh/icons.css" rel="stylesheet">
-    <title>CV Integrante 1</title>
+    <title>CV Galindo Oviedo, Joseph Alfredo</title>
 </head>
 <body>
     <div id="top">
@@ -22,11 +22,11 @@
 			<li><a href="../index.html">Inicio</a></li>
             <li><a href="">Acerca de Nosotros</a>
 				<ul>
-                    <li><a href="Integrante1.html">Integrante 1</a></li>
-                    <li><a href="Integrante2.html">Integrante 2</a></li>
-                    <li><a href="Integrante3.html">Integrante 3</a></li>
-                    <li><a href="Integrante4.html">Integrante 4</a></li>
-                    <li><a href="Integrante5.html">Integrante 5</a></li>
+                    <li><a href="Integrante1.html">Galindo Oviedo, Joseph Alfredo</a></li>
+                    <li><a href="Integrante2.html">Sánchez Polanco, Bruno Daniel</a></li>
+                    <li><a href="Integrante3.html">Mendoza Aguilar, Elard Alonso</a></li>
+                    <li><a href="Integrante4.html">Roger Cáceres</a></li>
+                    <li><a href="Integrante5.html">Jean Piero Andre Bernabe Huanca</a></li>
                 </ul>
              </li>
             <li><a href="">Proyecto de Innovación</a>
@@ -46,22 +46,22 @@
     <div id="think">
         <div class="think__title">
             <div class="think__title__text">
-                <h1>Escribir Nombre de Integrante 1</h1>
+                <h1>Galindo Oviedo, Joseph Alfredo</h1>
             </div>
             <div class="think__title__content">
         </div>
 
         <div class="think">
             <div class="think__img">
-                <iframe src="https://docs.google.com/document/d/e/2PACX-1vTXUL9QOWmvujeudm_XkXUD7GC1I0fOzoHeWYZTUopqZ-6xskNRaMwp_T2ePbByrZzYyAWQ1btmDsPm/pub?embedded=true" height="560" width="600"></iframe>
+                <iframe src="https://docs.google.com/document/d/e/2PACX-1vTCvGeiMNvbO7v6L78bIeWATQqSDiC9N5VPuCZcwyg7TDK2ODaKua81n4k4d-CB7pDEBfjfvzvcv8U3/pub?embedded=true" height="560" width="600"></iframe>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
                     <i class="icon-speech-streamline-talk-user"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">Escribir como título "RESUMEN DE CURRICULUM VITAE"</p>
-                    <p class="think__details__info__cont">     Extracto profesional: descripción general de su experiencia,  áreas de conocimientos, fortalezas, funciones que ha desempeñado y cargos que ha tenido. Resuma en un párrafo lo más relevante de su carrera profesional, piense con detenimiento ya que es el primer contacto con un reclutador y debe decir lo que quiere transmitir con pocas palabras. No es necesario detallar la experiencia, tendrá oportunidad de hacerlo más adelante, describa las capacidades por las que debe ser contratado.</p><a href="https://drive.google.com/file/d/1UVY8x5f1ws-C-1tX_AOVW2XzvCrxNJ54/view?usp=sharing" target="_blank" class="think__details__extra__description">Descargue aquí Curriculum Vitae</a>
+                    <p class="think__details__info__title">RESUMEN DE CURRICULUM VITAE</p>
+                    <p class="think__details__info__cont">     Extracto profesional: descripción general de su experiencia,  áreas de conocimientos, fortalezas, funciones que ha desempeñado y cargos que ha tenido. Resuma en un párrafo lo más relevante de su carrera profesional, piense con detenimiento ya que es el primer contacto con un reclutador y debe decir lo que quiere transmitir con pocas palabras. No es necesario detallar la experiencia, tendrá oportunidad de hacerlo más adelante, describa las capacidades por las que debe ser contratado.</p><a href="https://docs.google.com/document/d/e/2PACX-1vTCvGeiMNvbO7v6L78bIeWATQqSDiC9N5VPuCZcwyg7TDK2ODaKua81n4k4d-CB7pDEBfjfvzvcv8U3/pub?embedded=true" target="_blank" class="think__details__extra__description">Descargue aquí Curriculum Vitae</a>
                 </div>
 
                 <!-- <div class="think__details__extra">
@@ -85,7 +85,7 @@
                 </div>
                 <div class="footer__copy">
                     <img src="../img/fablab.png" alt="">
-                    <p>&copy; 2017 - Diseñado por: <a href="mailto:julio.lopez.s@tecsup.edu.pe">Julio Daniel López Sánchez</a></p>
+                    <p>&copy; 2018 - Diseñado por: <a href="bruno.sanchez@tecsup.edu.pe">Sánchez Polanco, Bruno Daniel</a></p>
                 </div>
             </div>
         </footer>
