--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <p class="team__item__description__info">Describir que les gusta hacer. y en que actividades son realmente hábiles.</p>
                     <p class="team__item__description__cal">Rol principal: <strong>Coordinador</strong></p>
                     <p class="team__item__description__cal">Rol Secundario: <strong>Explorador</strong></p>
-                    <p class="team__item__description__cal">Numero de Celular: <strong>None</strong></p>
+                    <p class="team__item__description__cal">Numero de Celular: <strong>982 060 469</strong></p>
                     <a href="mailto:joseph.galindo@tecsup.edu.pe" class="team__item__description__mail">joseph.galindo@tecsup.edu.pe</a>
                 </div>
             </div>
@@ -112,7 +112,7 @@
                   <p class="team__item__description__info">Describir que les gusta hacer. y en que actividades son realmente hábiles.</p>
                   <p class="team__item__description__cal">Rol principal: <strong>Explorador</strong></p>
                   <p class="team__item__description__cal">Rol Secundario: <strong>Constructor</strong></p>
-                  <p class="team__item__description__cal">Numero de Celular: <strong>None</strong></p>
+                  <p class="team__item__description__cal">Numero de Celular: <strong>936 668 749</strong></p>
                   <a href="mailto:elard.mendoza@tecsup.edu.pe" class="team__item__description__mail">elard.mendoza@tecsup.edu.pe</a>
                 </div>
             </div>
@@ -125,7 +125,7 @@
                       <p class="team__item__description__info">Describir que les gusta hacer. y en que actividades son realmente hábiles.</p>
                       <p class="team__item__description__cal">Rol principal: <strong>Comunicador</strong></p>
                       <p class="team__item__description__cal">Rol Secundario: <strong>Constructor</strong></p>
-                      <p class="team__item__description__cal">Numero de Celular: <strong>None</strong></p>
+                      <p class="team__item__description__cal">Numero de Celular: <strong>944 037 888</strong></p>
                       <a href="mailto:roger.caceres@tecsup.edu.pe" class="team__item__description__mail">roger.caceres@tecsup.edu.pe</a>
                     </div>
                 </div>
