--- a/Curriculum_Vitae/Integrante5.html
+++ b/Curriculum_Vitae/Integrante5.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../css/styles.css">
     <link href="https://file.myfontastic.com/GFdi3b86tZ4RquQn6hWJeh/icons.css" rel="stylesheet">
-    <title>CV Integrante 5</title>
+    <title>CV Jean Piero Andre Bernabe Huanca</title>
 </head>
 <body>
     <div id="top">
@@ -60,7 +60,7 @@
                     <i class="icon-speech-streamline-talk-user"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">Escribir como título "RESUMEN DE CURRICULUM VITAE"</p>
+                    <p class="think__details__info__title">RESUMEN DE CURRICULUM VITAE</p>
                     <p class="think__details__info__cont">     Extracto profesional: descripción general de su experiencia,  áreas de conocimientos, fortalezas, funciones que ha desempeñado y cargos que ha tenido. Resuma en un párrafo lo más relevante de su carrera profesional, piense con detenimiento ya que es el primer contacto con un reclutador y debe decir lo que quiere transmitir con pocas palabras. No es necesario detallar la experiencia, tendrá oportunidad de hacerlo más adelante, describa las capacidades por las que debe ser contratado.</p><a href="https://drive.google.com/file/d/1UVY8x5f1ws-C-1tX_AOVW2XzvCrxNJ54/view?usp=sharing" target="_blank" class="think__details__extra__description">Descargue aquí Curriculum Vitae</a>
                 </div>
 
@@ -85,7 +85,7 @@
                 </div>
                 <div class="footer__copy">
                     <img src="../img/fablab.png" alt="">
-                    <p>&copy; 2017 - Diseñado por: <a href="mailto:julio.lopez.s@tecsup.edu.pe">Julio Daniel López Sánchez</a></p>
+                    <p>&copy; 2018 - Diseñado por: <a href="bruno.sanchez@tecsup.edu.pe">Sánchez Polanco, Bruno Daniel</a></p>
                 </div>
             </div>
         </footer>
