--- a/Actividades/Informe_Final.html
+++ b/Actividades/Informe_Final.html
@@ -22,11 +22,11 @@
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="">Acerca de nosotros</a>
                     <ul>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 1</a></li>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 2</a></li>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 3</a></li>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 4</a></li>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 5</a></li>
+                        <li><a href="../Curriculum_Vitae/Integrante1.html">Galindo Oviedo, Joseph Alfredo</a></li>
+                        <li><a href="../Curriculum_Vitae/Integrante2.html">Sánchez Polanco, Bruno Daniel</a></li>
+                        <li><a href="../Curriculum_Vitae/Integrante3.html">Mendoza Aguilar, Elard Alonso</a></li>
+                        <li><a href="../Curriculum_Vitae/Integrante4.html">Roger Cáceres</a></li>
+                        <li><a href="../Curriculum_Vitae/Integrante5.html">Jean Piero Andre Bernabe Huanca</a></li>
                     </ul>
                  </li>
                 <li><a href="../Proyecto_Innovacion.html">Proyecto de Innovación</a>
