--- a/Actividades/Actividad1.html
+++ b/Actividades/Actividad1.html
@@ -22,11 +22,11 @@
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="">Acerca de nosotros</a>
                     <ul>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 1</a></li>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 2</a></li>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 3</a></li>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 4</a></li>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 5</a></li>
+                        <li><a href="../Curriculum_Vitae/Integrante1.html">Galindo Oviedo, Joseph Alfredo</a></li>
+                        <li><a href="../Curriculum_Vitae/Integrante2.html">Sánchez Polanco, Bruno Daniel</a></li>
+                        <li><a href="../Curriculum_Vitae/Integrante3.html">Mendoza Aguilar, Elard Alonso</a></li>
+                        <li><a href="../Curriculum_Vitae/Integrante4.html">Roger Cáceres</a></li>
+                        <li><a href="../Curriculum_Vitae/Integrante5.html">Jean Piero Andre Bernabe Huanca</a></li>
                     </ul>
                  </li>
                 <li><a href="../Proyecto_Innovacion.html">Proyecto de Innovación</a>
@@ -52,7 +52,7 @@
 
         <div class="think">
             <div class="think__img">
-                <iframe src="https://docs.google.com/document/d/e/2PACX-1vRJS6IXDCrNE4OwoeOeMb1VLIfDwb7O5BtrCpak-JhrXbDOKwTb_50BcNLzG8jDfP-D-Iz1zELgrGl_/pub?embedded=true" height="560" width="560"></iframe>
+                <iframe src="https://docs.google.com/document/d/e/2PACX-1vRwEmuZnFfumn1Aykxd11fawqt6C3cdwNbl6S1Jbqh5UAnGfVxYy8oyO4YQ-29lSTPOAoy3QrlK74Qs/pub?embedded=true" height="560" width="560"></iframe>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
@@ -85,7 +85,7 @@
                     <p class="think__details__extra__description">En la creación de equipos se asignan roles principales y secundarios.</p>
                     <br>
                     Adjuntar el informe completo de la actividad.</p>
-                    <a href="https://drive.google.com/file/d/1L0N1IZaw4q0WcoVhj6nV1DBS4MiyI2Kw/view?usp=sharing" target="_blank">Descargue aquí el informe.</a>
+                    <a href="https://docs.google.com/document/d/e/2PACX-1vRwEmuZnFfumn1Aykxd11fawqt6C3cdwNbl6S1Jbqh5UAnGfVxYy8oyO4YQ-29lSTPOAoy3QrlK74Qs/pub?embedded=true" target="_blank">Descargue aquí el informe.</a>
                 </div>
             </div>
         </div>
@@ -98,7 +98,7 @@
                 </div>
                 <div class="footer__copy">
                     <img src="../img/fablab.png" alt="">
-                    <p>&copy; 2018 - Diseñado por: <a href="colocar_correo_@tecsup.edu.pe">Colocar el nombre del editor de la página.</a></p>
+                    <p>&copy; 2018 - Diseñado por: <a href="bruno.sanchez@tecsup.edu.pe">Sánchez Polanco, Bruno Daniel</a></p>>
                 </div>
             </div>
         </footer>
