--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 </div>
                 <div class="team__item">
                         <div class="team__item__img">
-                            <img src="img/Foto_Integrante_5.jpg" alt="">
+                            <img src="img/Piero.png" alt="">
                         </div>
                         <div class="team__item__description">
                           <p class="team__item__description__name">Jean Piero Andre Bernabe Huanca</p>
