--- a/Actividades/Informe_Final.html
+++ b/Actividades/Informe_Final.html
@@ -98,7 +98,7 @@
                 </div>
                 <div class="footer__copy">
                     <img src="../img/fablab.png" alt="">
-                    <p>&copy; 2018 - Diseñado por: <a href="colocar_correo_@tecsup.edu.pe">Colocar el nombre del editor de la página.</a></p>
+                    <p>&copy; 2018 - Diseñado por: <a href="bruno.sanchez@tecsup.edu.pe">Sánchez Polanco, Bruno Daniel</a></p>
                 </div>
             </div>
         </footer>
