--- a/Actividades/Actividad2.html
+++ b/Actividades/Actividad2.html
@@ -22,11 +22,11 @@
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="">Acerca de nosotros</a>
                     <ul>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 1</a></li>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 2</a></li>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 3</a></li>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 4</a></li>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 5</a></li>
+                        <li><a href="../Curriculum_Vitae/Integrante1.html">Galindo Oviedo, Joseph Alfredo</a></li>
+                        <li><a href="../Curriculum_Vitae/Integrante2.html">Sánchez Polanco, Bruno Daniel</a></li>
+                        <li><a href="../Curriculum_Vitae/Integrante3.html">Mendoza Aguilar, Elard Alonso</a></li>
+                        <li><a href="../Curriculum_Vitae/Integrante4.html">Roger Cáceres</a></li>
+                        <li><a href="../Curriculum_Vitae/Integrante5.html">Jean Piero Andre Bernabe Huanca</a></li>
                     </ul>
                  </li>
                 <li><a href="../Proyecto_Innovacion.html">Proyecto de Innovación</a>
@@ -52,7 +52,7 @@
 
         <div class="think">
             <div class="think__img">
-              <iframe src="https://docs.google.com/document/d/e/2PACX-1vQHB7a1FD1ocUt19RLZZ8b13zBcF3i7bdRdpw0bAaaNZCLINF6FDmb956BgW8Y7uewbyFxDkOZveOLg/pub?embedded=true"height="560"width="560"></iframe>
+              <iframe src="https://docs.google.com/document/d/e/2PACX-1vQmGFaoweFX6pL_kJefWs1HAZPdiE1lMR0xSjtHXqxCkMPS28jL0C3gJS93Y4abQ3F2afs-NKJeOvx7/pub?embedded=true"height="560"width="560"></iframe>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
@@ -80,7 +80,7 @@
                     <p class="think__details__extra__title">Criterio de evaluación 4</p>
                     <p class="think__details__extra__description">Aplicar como equipo criterios objetivos para la toma de decisiones.</p>
                     Adjuntar el informe completo de la actividad.</p>
-                    <a href="https://drive.google.com/file/d/1QT-zHM0tiuet6gWkOP-D_VBVv_djwjdR/view?usp=sharing" target="_blank">Descargue aquí el informe.</a>
+                    <a href="https://docs.google.com/document/d/1GDzEDyFlLperqH0BqI8jKHWoeY0sZGITNQJjBVd63Us/view?usp=sharing" target="_blank">Descargue aquí el informe.</a>
                 </div>
             </div>
         </div>
@@ -93,7 +93,7 @@
                 </div>
                 <div class="footer__copy">
                     <img src="../img/fablab.png" alt="">
-                    <p>&copy; 2018 - Diseñado por: <a href="colocar_correo_@tecsup.edu.pe">Colocar el nombre del editor de la página.</a></p>
+                    <p>&copy; 2018 - Diseñado por: <a href="bruno.sanchez@tecsup.edu.pe">Sánchez Polanco, Bruno Daniel</a></p>
                 </div>
             </div>
         </footer>
