--- a/Curriculum_Vitae/Integrante3.html
+++ b/Curriculum_Vitae/Integrante3.html
@@ -53,7 +53,7 @@
 
         <div class="think">
             <div class="think__img">
-                <iframe src="https://docs.google.com/document/d/e/2PACX-1vR3Acvu9lk-YsjErmElngHmPsu_LHLY9BuDiO4aqpBvEXvLl8fqnHbbdJGPScPWIyD4CiXfvuT752i4/pub?embedded=true" height="560" width="600"></iframe>
+                <iframe src="https://drive.google.com/file/d/0B4pagrOn0qD9OUtnell5N2pvVjZWdXlReEcwNmc2a2UxQVNJ/preview" height="560" width="600"></iframe>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
@@ -61,7 +61,7 @@
                 </div>
                 <div class="think__details__info">
                     <p class="think__details__info__title">RESUMEN DE CURRICULUM VITAE</p>
-                    <p class="think__details__info__cont">     Extracto profesional: descripción general de su experiencia,  áreas de conocimientos, fortalezas, funciones que ha desempeñado y cargos que ha tenido. Resuma en un párrafo lo más relevante de su carrera profesional, piense con detenimiento ya que es el primer contacto con un reclutador y debe decir lo que quiere transmitir con pocas palabras. No es necesario detallar la experiencia, tendrá oportunidad de hacerlo más adelante, describa las capacidades por las que debe ser contratado.</p><a href="https://docs.google.com/document/d/e/2PACX-1vR3Acvu9lk-YsjErmElngHmPsu_LHLY9BuDiO4aqpBvEXvLl8fqnHbbdJGPScPWIyD4CiXfvuT752i4/pub?embedded=true" target="_blank" class="think__details__extra__description">Descargue aquí Curriculum Vitae</a>
+                    <p class="think__details__info__cont">     Me considero una persona respetuosa, honesta y responsable. Me gusta aprender de los demás creo que en cada persona hay algo que uno puede aprender. También me gusta trabajar en equipo y siempre realizar un buen trabajo.</p><a href="https://drive.google.com/file/d/0B4pagrOn0qD9OUtnell5N2pvVjZWdXlReEcwNmc2a2UxQVNJ/view?usp=sharing" target="_blank" class="think__details__extra__description">Descargue aquí Curriculum Vitae</a>
                 </div>
 
                 <!-- <div class="think__details__extra">
