--- a/Curriculum_Vitae/Integrante4.html
+++ b/Curriculum_Vitae/Integrante4.html
@@ -53,7 +53,7 @@
 
         <div class="think">
             <div class="think__img">
-                <iframe src="https://docs.google.com/document/d/e/2PACX-1vRE2f470joXztTcQQXLRFmHru2wvf8CiEkJCiya2AUF_jDbikj1PHC4J91mhU7qyYvCryxGNQreqAOf/pub?embedded=true" height="560" width="600"></iframe>
+                <iframe src="https://drive.google.com/file/d/0B4pagrOn0qD9SmtjX0ZVYTNiTlQ3dnJBUDNES25feG5DcmtF/preview" height="560" width="600"></iframe>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
@@ -61,7 +61,8 @@
                 </div>
                 <div class="think__details__info">
                     <p class="think__details__info__title">RESUMEN DE CURRICULUM VITAE</p>
-                    <p class="think__details__info__cont">     Extracto profesional: descripción general de su experiencia,  áreas de conocimientos, fortalezas, funciones que ha desempeñado y cargos que ha tenido. Resuma en un párrafo lo más relevante de su carrera profesional, piense con detenimiento ya que es el primer contacto con un reclutador y debe decir lo que quiere transmitir con pocas palabras. No es necesario detallar la experiencia, tendrá oportunidad de hacerlo más adelante, describa las capacidades por las que debe ser contratado.</p><a href="https://docs.google.com/document/d/e/2PACX-1vRE2f470joXztTcQQXLRFmHru2wvf8CiEkJCiya2AUF_jDbikj1PHC4J91mhU7qyYvCryxGNQreqAOf/pub?embedded=true" target="_blank" class="think__details__extra__description">Descargue aquí Curriculum Vitae</a>
+                    <p class="think__details__info__cont">     Soy una persona con valores morales y éticos tales como: honestidad, responsabilidad, honor y proactividad. Tengo la capacidad de aprender con rapidez y trabajar en equipo. Soy persistente, me gusta destacarme y sobresalir. Lucho por alcanzar mis metas propuestas.
+Soy Técnico en Conectividad y Redes y estoy capacitado para brindar asistencia técnica en todo lo relacionado a instalaciones eléctricas, mantenimiento de sistemas operativos, ensamblaje de computadoras e instalación de telecomunicaciones.</p><a href="https://drive.google.com/file/d/0B4pagrOn0qD9SmtjX0ZVYTNiTlQ3dnJBUDNES25feG5DcmtF/view?usp=sharing" target="_blank" class="think__details__extra__description">Descargue aquí Curriculum Vitae</a>
                 </div>
 
                 <!-- <div class="think__details__extra">
