--- a/Proyecto_Innovacion.html
+++ b/Proyecto_Innovacion.html
@@ -25,7 +25,7 @@
                     <li><a href="Integrante1.html">Galindo Oviedo, Joseph Alfredo</a></li>
                     <li><a href="Integrante2.html">Sánchez Polanco, Bruno Daniel</a></li>
                     <li><a href="Integrante3.html">Mendoza Aguilar, Elard Alonso</a></li>
-                    <li><a href="Integrante4.html">Caceres Riveros, Roger Percy</a></li>
+                    <li><a href="Integrante4.html">Cáceres Riveros, Roger Percy</a></li>
                     <li><a href="Integrante5.html">Bernabe Huanca, Jean Piero Andre</a></li>
                 </ul>
              </li>
@@ -122,7 +122,7 @@
                 </div>
                 <div class="footer__copy">
                     <img src="img/fablab.png" alt="">
-                    <p>&copy; 2017 - Diseñado por: <a href="mailto:julio.lopez.s@tecsup.edu.pe">Julio Daniel López Sánchez</a></p>
+                    <p>&copy; 2018 - Diseñado por: <a href="bruno.sanchez@tecsup.edu.pe">Sánchez Polanco, Bruno Daniel</a></p>
                 </div>
             </div>
         </footer>
