--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <h4>Acerca de Nosotros</h4>
             </div>
             <div class="about__content">
-                <p>Somos un equipo del instituto superior tecnológico TECSUP, buscamos un mejor desarrollo para nuestro país.</p>
+                <p>Somos un equipo del instituto superior tecnológico TECSUP en el cual todos somos de la carrera Electrotecnia Industrial, buscamos un mejor desarrollo para nuestro país.</p>
             </div>
         </div>
     </div>
@@ -121,7 +121,7 @@
                         <img src="img/Roger Caceres.jpeg" alt="">
                     </div>
                     <div class="team__item__description">
-                      <p class="team__item__description__name">Caceres Riveros, Roger Percy</p>
+                      <p class="team__item__description__name">Cáceres Riveros, Roger Percy</p>
                       <p class="team__item__description__info">Describir que les gusta hacer. y en que actividades son realmente hábiles.</p>
                       <p class="team__item__description__cal">Rol principal: <strong>Comunicador</strong></p>
                       <p class="team__item__description__cal">Rol Secundario: <strong>Constructor</strong></p>
