--- a/Actividades/Informe_Final.html
+++ b/Actividades/Informe_Final.html
@@ -25,7 +25,7 @@
                         <li><a href="../Curriculum_Vitae/Integrante1.html">Galindo Oviedo, Joseph Alfredo</a></li>
                         <li><a href="../Curriculum_Vitae/Integrante2.html">Sánchez Polanco, Bruno Daniel</a></li>
                         <li><a href="../Curriculum_Vitae/Integrante3.html">Mendoza Aguilar, Elard Alonso</a></li>
-                        <li><a href="../Curriculum_Vitae/Integrante4.html">Caceres Riveros, Roger Percy</a></li>
+                        <li><a href="../Curriculum_Vitae/Integrante4.html">Cáceres Riveros, Roger Percy</a></li>
                         <li><a href="../Curriculum_Vitae/Integrante5.html">Bernabe Huanca, Jean Piero Andre</a></li>
                     </ul>
                  </li>
