--- a/Curriculum_Vitae/Integrante2.html
+++ b/Curriculum_Vitae/Integrante2.html
@@ -25,7 +25,7 @@
                     <li><a href="Integrante1.html">Galindo Oviedo, Joseph Alfredo</a></li>
                     <li><a href="Integrante2.html">Sánchez Polanco, Bruno Daniel</a></li>
                     <li><a href="Integrante3.html">Mendoza Aguilar, Elard Alonso</a></li>
-                    <li><a href="Integrante4.html">Caceres Riveros, Roger Percy</a></li>
+                    <li><a href="Integrante4.html">Cáceres Riveros, Roger Percy</a></li>
                     <li><a href="Integrante5.html">Bernabe Huanca, Jean Piero Andre</a></li>
                 </ul>
              </li>
