--- a/Curriculum_Vitae/Integrante4.html
+++ b/Curriculum_Vitae/Integrante4.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../css/styles.css">
     <link href="https://file.myfontastic.com/GFdi3b86tZ4RquQn6hWJeh/icons.css" rel="stylesheet">
-    <title>CV Roger Cáceres</title>
+    <title>CV Cáceres Riveros, Roger Percy</title>
 </head>
 <body>
     <div id="top">
@@ -25,7 +25,7 @@
                     <li><a href="Integrante1.html">Galindo Oviedo, Joseph Alfredo</a></li>
                     <li><a href="Integrante2.html">Sánchez Polanco, Bruno Daniel</a></li>
                     <li><a href="Integrante3.html">Mendoza Aguilar, Elard Alonso</a></li>
-                    <li><a href="Integrante4.html">Caceres Riveros, Roger Percy</a></li>
+                    <li><a href="Integrante4.html">Cáceres Riveros, Roger Percy</a></li>
                     <li><a href="Integrante5.html">Bernabe Huanca, Jean Piero Andre</a></li>
                 </ul>
              </li>
@@ -46,7 +46,7 @@
     <div id="think">
         <div class="think__title">
             <div class="think__title__text">
-                <h1>Roger Cáceres</h1>
+                <h1>Cáceres Riveros, Roger Percy</h1>
             </div>
             <div class="think__title__content">
         </div>
