--- a/Actividades/Actividad2.html
+++ b/Actividades/Actividad2.html
@@ -52,7 +52,7 @@
 
         <div class="think">
             <div class="think__img">
-              <iframe src="https://docs.google.com/document/d/e/2PACX-1vQmGFaoweFX6pL_kJefWs1HAZPdiE1lMR0xSjtHXqxCkMPS28jL0C3gJS93Y4abQ3F2afs-NKJeOvx7/pub?embedded=true"height="560"width="560"></iframe>
+              <iframe src="https://drive.google.com/file/d/0B4pagrOn0qD9LThMVDJnZHdBRHpmbTZ1Uzk4T3lsdTE3aWZz/preview"height="560"width="560"></iframe>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
@@ -80,7 +80,7 @@
                     <p class="think__details__extra__title">Criterio de evaluación 4</p>
                     <p class="think__details__extra__description">Aplicar como equipo criterios objetivos para la toma de decisiones.</p>
                     Adjuntar el informe completo de la actividad.</p>
-                    <a href="https://docs.google.com/document/d/1GDzEDyFlLperqH0BqI8jKHWoeY0sZGITNQJjBVd63Us/view?usp=sharing" target="_blank">Descargue aquí el informe.</a>
+                    <a href="https://drive.google.com/file/d/0B4pagrOn0qD9LThMVDJnZHdBRHpmbTZ1Uzk4T3lsdTE3aWZz/view?usp=sharing" target="_blank">Descargue aquí el informe.</a>
                 </div>
             </div>
         </div>
