--- a/Actividades/Actividad2.html
+++ b/Actividades/Actividad2.html
@@ -66,19 +66,19 @@
 
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">Criterio de evaluación 1</p>
-                    <p class="think__details__extra__description">Entienden que las oportunidades para emprender se originan en problemas y oportunidades que forman parte de nuestro día a día</p>
+                    <p class="think__details__extra__description">Primero buscamos en la realidad problemas, pero ¿es posible sacar algún beneficio de éste problema? La respuesta esque sí, ya que hay muchos problemas sin resolver, sin embargo es difícil de notarlos si es que no les prestas mucha atención.</p>
                 </div>
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">Criterio de evaluación 2</p>
-                    <p class="think__details__extra__description">Observar la realidad con actitud Critica.</p>
+                    <p class="think__details__extra__description">Las personas suelen confundirse a menudo, es un tema muy visto cuando de calles nuevas se tratan, no será fácil realizar que las personas entiendan el nuevo método que buscamos desarrollar, pero tampoco es imposible.</p>
                 </div>
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">Criterio de evaluación 3</p>
-                    <p class="think__details__extra__description">Ser capaces de incorporrar los diferentes trabajos individuales a la visión global del equipo.</p>
+                    <p class="think__details__extra__description">El equipo no será dividido en un término para finalizar, pero si dividido a realizar distintos tipos de tareas que conllevarán a un fin en específico y remediar el problema.</p>
                 </div>
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">Criterio de evaluación 4</p>
-                    <p class="think__details__extra__description">Aplicar como equipo criterios objetivos para la toma de decisiones.</p>
+                    <p class="think__details__extra__description">Los roles que tomamos cada uno será en específico una tarea única que se deberá cumplir para realizar el proyecto.</p>
                     Adjuntar el informe completo de la actividad.</p>
                     <a href="https://drive.google.com/file/d/0B4pagrOn0qD9LThMVDJnZHdBRHpmbTZ1Uzk4T3lsdTE3aWZz/view?usp=sharing" target="_blank">Descargue aquí el informe.</a>
                 </div>
