--- a/Actividades/Actividad1.html
+++ b/Actividades/Actividad1.html
@@ -52,7 +52,7 @@
 
         <div class="think">
             <div class="think__img">
-                <iframe src="https://docs.google.com/document/d/e/2PACX-1vRwEmuZnFfumn1Aykxd11fawqt6C3cdwNbl6S1Jbqh5UAnGfVxYy8oyO4YQ-29lSTPOAoy3QrlK74Qs/pub?embedded=true" height="560" width="560"></iframe>
+                <iframe src="https://drive.google.com/file/d/0B4pagrOn0qD9bkFmM0t0X0JoTW5WMVM2Rm5Cd0VpOHNjZlI4/preview" height="560" width="560"></iframe>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
@@ -85,7 +85,7 @@
                     <p class="think__details__extra__description">En la creación de equipos se asignan roles principales y secundarios.</p>
                     <br>
                     Adjuntar el informe completo de la actividad.</p>
-                    <a href="https://docs.google.com/document/d/e/2PACX-1vRwEmuZnFfumn1Aykxd11fawqt6C3cdwNbl6S1Jbqh5UAnGfVxYy8oyO4YQ-29lSTPOAoy3QrlK74Qs/pub?embedded=true" target="_blank">Descargue aquí el informe.</a>
+                    <a href="https://drive.google.com/file/d/0B4pagrOn0qD9bkFmM0t0X0JoTW5WMVM2Rm5Cd0VpOHNjZlI4/view?usp=sharing" target="_blank">Descargue aquí el informe.</a>
                 </div>
             </div>
         </div>
