--- a/Curriculum_Vitae/Integrante1.html
+++ b/Curriculum_Vitae/Integrante1.html
@@ -61,7 +61,7 @@
                 </div>
                 <div class="think__details__info">
                     <p class="think__details__info__title">RESUMEN DE CURRICULUM VITAE</p>
-                    <p class="think__details__info__cont">     Extracto profesional: descripción general de su experiencia,  áreas de conocimientos, fortalezas, funciones que ha desempeñado y cargos que ha tenido. Resuma en un párrafo lo más relevante de su carrera profesional, piense con detenimiento ya que es el primer contacto con un reclutador y debe decir lo que quiere transmitir con pocas palabras. No es necesario detallar la experiencia, tendrá oportunidad de hacerlo más adelante, describa las capacidades por las que debe ser contratado.</p><a href="https://docs.google.com/document/d/e/2PACX-1vTCvGeiMNvbO7v6L78bIeWATQqSDiC9N5VPuCZcwyg7TDK2ODaKua81n4k4d-CB7pDEBfjfvzvcv8U3/pub?embedded=true" target="_blank" class="think__details__extra__description">Descargue aquí Curriculum Vitae</a>
+                    <p class="think__details__info__cont">     Soy una persona que no se rinde cuando se indica, soy respetuoso, honesto y considero aquellos valores loas más importantes para poder triunfar.</p><a href="https://docs.google.com/document/d/e/2PACX-1vTCvGeiMNvbO7v6L78bIeWATQqSDiC9N5VPuCZcwyg7TDK2ODaKua81n4k4d-CB7pDEBfjfvzvcv8U3/pub?embedded=true" target="_blank" class="think__details__extra__description">Descargue aquí Curriculum Vitae</a>
                 </div>
 
                 <!-- <div class="think__details__extra">
