--- a/Curriculum_Vitae/Integrante1.html
+++ b/Curriculum_Vitae/Integrante1.html
@@ -53,7 +53,7 @@
 
         <div class="think">
             <div class="think__img">
-                <iframe src="https://docs.google.com/document/d/e/2PACX-1vTCvGeiMNvbO7v6L78bIeWATQqSDiC9N5VPuCZcwyg7TDK2ODaKua81n4k4d-CB7pDEBfjfvzvcv8U3/pub?embedded=true" height="560" width="600"></iframe>
+                <iframe src="https://drive.google.com/file/d/0B4pagrOn0qD9SDE0WE1RUTdGRmUtcndnZXhGWDJCdWxTd2dB/preview" height="560" width="600"></iframe>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
@@ -61,7 +61,7 @@
                 </div>
                 <div class="think__details__info">
                     <p class="think__details__info__title">RESUMEN DE CURRICULUM VITAE</p>
-                    <p class="think__details__info__cont">     Soy una persona que no se rinde cuando se indica, soy respetuoso, honesto y considero aquellos valores loas más importantes para poder triunfar.</p><a href="https://docs.google.com/document/d/e/2PACX-1vTCvGeiMNvbO7v6L78bIeWATQqSDiC9N5VPuCZcwyg7TDK2ODaKua81n4k4d-CB7pDEBfjfvzvcv8U3/pub?embedded=true" target="_blank" class="think__details__extra__description">Descargue aquí Curriculum Vitae</a>
+                    <p class="think__details__info__cont">     Soy una persona que no se rinde cuando se indica, soy respetuoso, honesto y considero aquellos valores loas más importantes para poder triunfar.</p><a href="https://drive.google.com/file/d/0B4pagrOn0qD9SDE0WE1RUTdGRmUtcndnZXhGWDJCdWxTd2dB/view?usp=sharing" target="_blank" class="think__details__extra__description">Descargue aquí Curriculum Vitae</a>
                 </div>
 
                 <!-- <div class="think__details__extra">
