--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <li><a href="Actividades/Actividad5.html">Actividad 5: Prototipo</a></li>
                     <li><a href="Actividades/Actividad6.html">Actividad 6: Mercado</a></li>
                     <li><a href="Proyecto_Final/Informe_Final.html">Informe Final: StartUp</a></li>
-                </ul>
+                  </ul>
             </li>
 		</ul>
 	</nav>
@@ -54,7 +54,7 @@
                     <p><h4>"Cityphy"</h4></p>
                     <p>Usualmente se ven muchos turistas por las calles visitando nuestra hermosa ciudad, pero no siempre son conscientes de todos los detalles o incluso por dónde andan, para eso tenemos una solución.</p>
                     <p>Diseñamos ésta página con el fin de que la información sea facilitada para los que nos visiten y estén de acuerdo a lo que les presentamos.</p>
-
+<div style="width:600px"><iframe style="background-color:transparent; float:left; border:none;" width="500" height="300" src="http://www.aforismos.net/dispositivo/aforismosdisppeque.html"></iframe></div>
                 </div>
             </div>
 
