--- a/Curriculum_Vitae/Integrante3.html
+++ b/Curriculum_Vitae/Integrante3.html
@@ -39,9 +39,14 @@
                     <li><a href="../Actividades/Actividad6.html">Actividad 6: Mercado</a></li>
                     <li><a href="../Actividades/Informe_Final.html">Informe Final: StartUp</a></li>
                   </ul>
-              </li>
-          </ul>
-	</nav>
+            </li>
+            <li><a href="">Notas</a>
+                <ul>
+                    <li><a href="Notas.html">Notas grupo 11</a></li>
+                  </ul>
+            </li>
+		</ul>
+	</nav>>
 
     <div id="think">
         <div class="think__title">
