--- a/Proyecto_Innovacion.html
+++ b/Proyecto_Innovacion.html
@@ -38,10 +38,15 @@
                     <li><a href="Actividades/Actividad5.html">Actividad 5: Prototipo.</a></li>
                     <li><a href="Actividades/Actividad6.html">Actividad 6: Mercado.</a></li>
                     <li><a href="Actividades/Informe_Final.html">Informe Final: StratUp.</a></li>
-                </ul>
+                  </ul>
             </li>
-		</ul>
-	</nav>
+            <li><a href="">Notas</a>
+                <ul>
+                    <li><a href="Notas.html">Notas grupo 11</a></li>
+                  </ul>
+            </li>
+    </ul>
+  </nav>
     <div id="projectsFinal">
         <div class="projectsFinal__title">
             <div class="projectsFinal__title__text">
