--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
                     <li><a href="Proyecto_Final/Informe_Final.html">Informe Final: StartUp</a></li>
                   </ul>
             </li>
+            <li><a href="">Notas</a>
+                <ul>
+                    <li><a href="Notas.html">Notas grupo 11</a></li>
+                  </ul>
+            </li>
 		</ul>
 	</nav>
     <header id="header">
