--- a/Notas.html
+++ b/Notas.html
@@ -38,82 +38,16 @@
                     <li><a href="Actividades/Actividad5.html">Actividad 5: Prototipo.</a></li>
                     <li><a href="Actividades/Actividad6.html">Actividad 6: Mercado.</a></li>
                     <li><a href="Actividades/Informe_Final.html">Informe Final: StratUp.</a></li>
-                </ul>
+                  </ul>
             </li>
-		</ul>
-	</nav>
-    <div id="projectsFinal">
-        <div class="projectsFinal__title">
-            <div class="projectsFinal__title__text">
-                <h1>Proyecto <span>Innovación</span></h1>
-            </div>
-        </div>
-        <div class="projectsFinal">
-            <div class="projectsFinal__week">
-                <div class="projectsFinal__week__icon">
-                    <i class="icon-pen-streamline-1"></i>
-                </div>
-                <div class="projectsFinal__week__details">
-                    <a href="Actividades/Actividad1.html" class="projectsFinal__week__details__week">Actividad 1 - Emprendimiento</a>
-                    <p class="projectsFinal__week__details__description">Escribir en esta sección la descripción breve de esta actividad</p>
-                </div>
-            </div>
-            <div class="projectsFinal__week">
-                <div class="projectsFinal__week__icon">
-                    <i class="icon-settings-streamline"></i>
-                </div>
-                <div class="projectsFinal__week__details">
-                    <a href="Actividades/Actividad2.html" class="projectsFinal__week__details__week">Actividad 2 - Problema</a>
-                    <p class="projectsFinal__week__details__description">Escribir en esta sección la descripción breve de esta actividad</p>
-                </div>
-            </div>
-            <div class="projectsFinal__week">
-                <div class="projectsFinal__week__icon">
-                    <i class="icon-design-graphic-tablet-streamline-tablet"></i>
-                </div>
-                <div class="projectsFinal__week__details">
-                    <a href="Actividades/Actividad3.html" class="projectsFinal__week__details__week">Actividad 3 - Oportunidades</a>
-                    <p class="projectsFinal__week__details__description">Escribir en esta sección la descripción breve de esta actividad</p>
-                </div>
-            </div>
-            <div class="projectsFinal__week">
-                <div class="projectsFinal__week__icon">
-                    <i class="icon-settings-streamline-1"></i>
-                </div>
-                <div class="projectsFinal__week__details">
-                    <a href="Actividades/Actividad4.html" class="projectsFinal__week__details__week">Actividad 4 - Modelo de Negocio</a>
-                    <p class="projectsFinal__week__details__description">Escribir en esta sección la descripción breve de esta actividad</p>
-                </div>
-            </div>
-            <div class="projectsFinal__week">
-                <div class="projectsFinal__week__icon">
-                    <i class="icon-remote-control-streamline"></i>
-                </div>
-                <div class="projectsFinal__week__details">
-                    <a href="Actividades/Actividad5.html" class="projectsFinal__week__details__week">Actividad 5 - Prototipo</a>
-                    <p class="projectsFinal__week__details__description">Escribir en esta sección la descripción breve de esta actividad</p>
-                </div>
-            </div>
-            <div class="projectsFinal__week">
-                <div class="projectsFinal__week__icon">
-                    <i class="icon-receipt-shopping-streamline"></i>
-                </div>
-                <div class="projectsFinal__week__details">
-                    <a href="Actividades/Actividad6.html" class="projectsFinal__week__details__week">Actividad 6 - Mercado</a>
-                    <p class="projectsFinal__week__details__description">Escribir en esta sección la descripción breve de esta actividad</p>
-                </div>
-            </div>
-            <div class="projectsFinal__week">
-                <div class="projectsFinal__week__icon">
-                    <i class="icon-receipt-shopping-streamline"></i>
-                </div>
-                <div class="projectsFinal__week__details">
-                    <a href="Actividades/Informe_Final.html" class="projectsFinal__week__details__week">Informe Final - StartUp</a>
-                    <p class="projectsFinal__week__details__description">Escribir en esta sección la descripción breve de esta actividad</p>
-                </div>
-            </div>
-        </div>
-    </div>
+            <li><a href="">Notas</a>
+                <ul>
+                    <li><a href="Notas.html">Notas grupo 11</a></li>
+                  </ul>
+            </li>
+    </ul>
+  </nav>
+    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSVp3vpOBjx1P2joHww1ggflA5Je9NrQBfAsaxZ_qrkvmt-nBXKLbzoGg6hevoosS4QCDjjLM3QLF6B/pubhtml?gid=1912634126&amp;single=true&amp;widget=true&amp;headers=false" height="560" width="1349" ></iframe>
     <footer id="footer">
             <div class="footer">
                 <div class="footer__licencia">
