--- a/Actividades/Actividad5.html
+++ b/Actividades/Actividad5.html
@@ -38,10 +38,15 @@
                         <li><a href="Actividad5.html">Actividad 5: Prototipo</a></li>
                         <li><a href="Actividad6.html">Actividad 6: Mercado</a></li>
                         <li><a href="Informe_Final.html">Informe Final: StartUp</a></li>
-                    </ul>
+                      </ul>
                 </li>
-            </ul>
-        </nav>
+                <li><a href="">Notas</a>
+                    <ul>
+                        <li><a href="../Notas.html">Notas grupo 11</a></li>
+                      </ul>
+                </li>
+        </ul>
+      </nav>>
 
     <div id="think">
         <div class="think__title">
