--- a/Actividades/Actividad6.html
+++ b/Actividades/Actividad6.html
@@ -42,7 +42,7 @@
                 </li>
                 <li><a href="">Notas</a>
                     <ul>
-                        <li><a href="Notas.html">Notas grupo 11</a></li>
+                        <li><a href="../Notas.html">Notas grupo 11</a></li>
                       </ul>
                 </li>
     		</ul>
