--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
                 <div class="main-header__copy__text">
                     <p><h4>"Cityphy"</h4></p>
-                    <p>Usualmente se ven muchos turistas por las calles visitando nuestra hermosa ciudad, pero no siempre son conscientes de todos los detalles o incluso por dónde andan, para eso tenemos una solución.</p>
+                    <p>Usualmente se ven muchas personas por las calles con una mirada extrañada o incluso preguntando a la gente cuál es el camino a seguir, para eso tenemos una solución.</p>
                     <p>Diseñamos ésta página con el fin de que la información sea facilitada para los que nos visiten y estén de acuerdo a lo que les presentamos.</p>
 <div style="width:600px"><iframe style="background-color:transparent; float:left; border:none;" width="500" height="300" src="http://www.aforismos.net/dispositivo/aforismosdisppeque.html"></iframe></div>
                 </div>
