--- a/Curriculum_Vitae/Integrante1.html
+++ b/Curriculum_Vitae/Integrante1.html
@@ -22,11 +22,11 @@
 			<li><a href="../index.html">Inicio</a></li>
             <li><a href="">Acerca de Nosotros</a>
 				<ul>
-          <li><a href="../Curriculum_Vitae/Integrante1.html">Galindo Oviedo, Joseph Alfredo</a></li>
-          <li><a href="../Curriculum_Vitae/Integrante2.html">Sánchez Polanco, Bruno Daniel</a></li>
-          <li><a href="../Curriculum_Vitae/Integrante3.html">Mendoza Aguilar, Elard Alonso</a></li>
-          <li><a href="../Curriculum_Vitae/Integrante4.html">Cáceres Riveros, Roger Percy</a></li>
-          <li><a href="../Curriculum_Vitae/Integrante5.html">Bernabe Huanca, Jean Piero Andre</a></li>
+                    <li><a href="Integrante1.html">Galindo Oviedo, Joseph Alfredo</a></li>
+                    <li><a href="Integrante2.html">Sánchez Polanco, Bruno Daniel</a></li>
+                    <li><a href="Integrante3.html">Mendoza Aguilar, Elard Alonso</a></li>
+                    <li><a href="Integrante4.html">Cáceres Riveros, Roger Percy</a></li>
+                    <li><a href="Integrante5.html">Bernabe Huanca, Jean Piero Andre</a></li>
                 </ul>
              </li>
             <li><a href="">Proyecto de Innovación</a>
