--- a/Notas.html
+++ b/Notas.html
@@ -29,7 +29,7 @@
                           <li><a href="Curriculum_Vitae/Integrante5.html">Bernabe Huanca, Jean Piero Andre</a></li>
                       </ul>
              </li>
-            <li><a href="finalProject.html">Proyecto de Innovación</a>
+            <li><a href="Proyecto_Innovacion.html">Proyecto de Innovación</a>
                 <ul>
                     <li><a href="Actividades/Actividad1.html">Actividad 1: Emprendimiento.</a></li>
                     <li><a href="Actividades/Actividad2.html">Actividad 2: Problemas.</a></li>
