--- a/Proyecto_Innovacion.html
+++ b/Proyecto_Innovacion.html
@@ -22,14 +22,14 @@
 			<li><a href="index.html">Inicio</a></li>
             <li><a href="">Acerca de Nosotros</a>
 				<ul>
-                    <li><a href="Integrante1.html">Galindo Oviedo, Joseph Alfredo</a></li>
-                    <li><a href="Integrante2.html">Sánchez Polanco, Bruno Daniel</a></li>
-                    <li><a href="Integrante3.html">Mendoza Aguilar, Elard Alonso</a></li>
-                    <li><a href="Integrante4.html">Cáceres Riveros, Roger Percy</a></li>
-                    <li><a href="Integrante5.html">Bernabe Huanca, Jean Piero Andre</a></li>
+                    <li><a href="Curriculum_Vitae/Integrante1.html">Galindo Oviedo, Joseph Alfredo</a></li>
+                    <li><a href="Curriculum_Vitae/Integrante2.html">Sánchez Polanco, Bruno Daniel</a></li>
+                    <li><a href="Curriculum_Vitae/Integrante3.html">Mendoza Aguilar, Elard Alonso</a></li>
+                    <li><a href="Curriculum_Vitae/Integrante4.html">Cáceres Riveros, Roger Percy</a></li>
+                    <li><a href="Curriculum_Vitae/Integrante5.html">Bernabe Huanca, Jean Piero Andre</a></li>
                 </ul>
              </li>
-            <li><a href="finalProject.html">Proyecto de Innovación</a>
+            <li><a href="Proyecto_Innovacion.html">Proyecto de Innovación</a>
                 <ul>
                     <li><a href="Actividades/Actividad1.html">Actividad 1: Emprendimiento.</a></li>
                     <li><a href="Actividades/Actividad2.html">Actividad 2: Problemas.</a></li>
@@ -42,7 +42,7 @@
             </li>
             <li><a href="">Notas</a>
                 <ul>
-                    <li><a href="../Notas.html">Notas grupo 11</a></li>
+                    <li><a href="Notas.html">Notas grupo 11</a></li>
                   </ul>
             </li>
     </ul>
