--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <h4>Acerca de Nosotros</h4>
             </div>
             <div class="about__content">
-                <p>Somos un equipo del instituto superior tecnológico TECSUP en el cual todos somos de la carrera Electrotecnia Industrial, buscamos un mejor desarrollo para nuestro país.</p>
+                <p>Somos un equipo de la carrera Electrotecnia Industrial, donde buscamos un mejor desarrollo para nuestro país comenzando por algo básico pero servicial.</p>
             </div>
         </div>
     </div>
