--- a/Proyecto_Innovacion.html
+++ b/Proyecto_Innovacion.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://file.myfontastic.com/GFdi3b86tZ4RquQn6hWJeh/icons.css" rel="stylesheet">
     <title>Proyecto Innovación</title>
+    <link rel="icon" type="image/png" href="icon.png">
 </head>
 <body>
     <div id="top">
