--- a/Curriculum_Vitae/Integrante4.html
+++ b/Curriculum_Vitae/Integrante4.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/styles.css">
     <link href="https://file.myfontastic.com/GFdi3b86tZ4RquQn6hWJeh/icons.css" rel="stylesheet">
     <title>CV Cáceres Riveros, Roger Percy</title>
+    <link rel="icon" type="image/png" href="../icon.png">
 </head>
 <body>
     <div id="top">
