--- a/index.html
+++ b/index.html
@@ -8,6 +8,37 @@
     <link href="https://file.myfontastic.com/GFdi3b86tZ4RquQn6hWJeh/icons.css" rel="stylesheet">
     <title>Proyecto de innovación 2018</title>
     <link rel="icon" type="image/png" href="icon.png">
+    <style type="text/css">
+  body
+  ul{
+    width: 900px;
+    margin: 0 auto;
+    margin-top: 0px;
+  }
+  ul li{
+
+    list-style: none;
+
+
+  }
+  ul li img{
+    background-size: cover;
+    border-radius: 6px;
+    float: left;
+    margin-right: -5px;
+    opacity: .6;
+    width: 190px;
+    height: 250px;
+    -webkit-transition:all .6s ease;
+  }
+  ul li img:hover{
+    opacity: 1;
+    border-radius: 200px;
+    -webkit-transform:scale(1.25) rotate(360deg);
+    box-shadow: 0px 0px 20px #ddd;
+
+  }
+</style>
 </head>
 <body>
     <div id="top">
@@ -85,7 +116,9 @@
             </div>
             <div class="team__item">
                 <div class="team__item__img">
-                    <img src="img/Joseph.jpg" alt="">
+                  <ul>
+                    <li><img src="img/Joseph.jpg" alt=""></li>
+                    </ul>
                 </div>
                 <div class="team__item__description">
                     <p class="team__item__description__name">Galindo Oviedo, Joseph Alfredo</p>
@@ -98,7 +131,9 @@
             </div>
             <div class="team__item">
                 <div class="team__item__img">
-                    <img src="img/Bruno Sanchez.jpeg" alt="">
+                  <ul>
+                    <li><img src="img/Bruno Sanchez.jpeg" alt=""></li>
+                    </ul>
                 </div>
                 <div class="team__item__description">
                   <p class="team__item__description__name">Sánchez Polanco, Bruno Daniel</p>
@@ -111,7 +146,9 @@
             </div>
             <div class="team__item">
                 <div class="team__item__img">
-                    <img src="img/Alonso.jpg" alt="">
+                  <ul>
+                    <li><img src="img/Alonso.jpg" alt=""></li>
+                    </ul>
                 </div>
                 <div class="team__item__description">
                   <p class="team__item__description__name">Mendoza Aguilar, Elard Alonso</p>
@@ -124,7 +161,9 @@
             </div>
             <div class="team__item">
                     <div class="team__item__img">
-                        <img src="img/Roger Caceres.jpeg" alt="">
+                      <ul>
+                        <li><img src="img/Roger Caceres.jpeg" alt=""></li>
+                        </ul>
                     </div>
                     <div class="team__item__description">
                       <p class="team__item__description__name">Cáceres Riveros, Roger Percy</p>
@@ -137,7 +176,9 @@
                 </div>
                 <div class="team__item">
                         <div class="team__item__img">
-                            <img src="img/Piero.png" alt="">
+                          <ul>
+                            <li><img src="img/Piero.png" alt=""></li>
+                            </ul>
                         </div>
                         <div class="team__item__description">
                           <p class="team__item__description__name">Bernabe Huanca, Jean Piero Andre</p>
